# LLM-agents-with-docker

./: .env_example  .gitignore  README.ipynb  README.md  checkpoints.sqlite4  checkpoints.sqlite5  checkpoints.sqlite6  checkpoints.sqlite7-shm  checkpoints.sqlite7-wal  checkpoints.sqlite8-shm  checkpoints.sqlite8-wal  main.py  pyproject.toml  requirements.txt
LLM_Agent_with_docker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: df_sales.csv  sales_data.csv  sales_dates_df.csv  sales_df.csv
src/: agent.py  checkpoints.sqlite-shm  checkpoints.sqlite-wal  checkpoints.sqlite2-shm  checkpoints.sqlite2-wal  checkpoints.sqlite3-shm  checkpoints.sqlite3-wal  checkpoints.sqlite4  config_handler.py  database_handler.py  docker_container.py  logger_setup.py  teste.ipynb  tools_schema.py  utils.py  workflow.py
