[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LLM-Agent-with-docker"
version = "0.1.0"
description = "This project implements a Postgres Agent that runs code in a docker container."
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "annotated-types",
    "anyio",
    "attrs",
    "certifi",
    "charset-normalizer",
    "contourpy",
    "cycler",
    "dataclasses-json",
    "distro",
    "docker",
    "fonttools",
    "frozenlist",
    "greenlet",
    "h11",
    "httpcore",
    "httpx",
    "idna",
    "jiter",
    "jsonpatch",
    "jsonpointer",
    "kiwisolver",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "langgraph",
    "langgraph-checkpoint",
    "langsmith",
    "marshmallow",
    "matplotlib",
    "multidict",
    "mypy-extensions",
    "numpy",
    "openai",
    "orjson",
    "packaging",
    "pandas",
    "pillow",
    "psycopg2",
    "pydantic",
    "pydantic_core",
    "pyparsing",
    "python-dateutil",
    "python-dotenv",
    "pytz",
    "PyYAML",
    "regex",
    "requests",
    "six",
    "sniffio",
    "SQLAlchemy",
    "tenacity",
    "tiktoken",
    "tqdm",
    "typing-inspect",
    "typing_extensions",
    "tzdata",
    "urllib3",
    "yarl",
]


[project.optional-dependencies]
dev = ["black", "flake8"]
test = ["pytest", "pytest-cov"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]